--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,18 @@
   --transition-property-margin: "margin";
   --transition-property-width: "width";
   --transition-property-grid-cols: "grid-template-columns";
+
+  --animate-enter: enter 0.3s ease-in-out;
+
+  @keyframes enter {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
 }
 
 body {
