--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,29 @@
   --transition-property-grid-cols: "grid-template-columns";
 
   --animate-enter: enter 0.3s ease-in-out;
+  --animate-bounce1: bounce 1.5s infinite ease-in-out;
 
   @keyframes enter {
+
     from {
       opacity: 0;
     }
 
     to {
       opacity: 1;
+    }
+  }
+
+  @keyframes bounce {
+
+    0%,
+    80%,
+    100% {
+      transform: scale(0);
+    }
+
+    40% {
+      transform: scale(1);
     }
   }
 }
